// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example from https://getbootstrap.com/docs/4.0/components/forms/#horizontal-form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group row"
  >
    <label
      className="col-3 col-form-label"
      htmlFor="email"
    >
      Email
    </label>
    <div
      className="col"
    >
      <input
        className="form-control"
        id="email"
        name="email"
        onChange={[Function]}
        type="email"
        value={undefined}
      />
    </div>
  </div>
  <div
    className="form-group row"
  >
    <label
      className="col-3 col-form-label"
      htmlFor="password"
    >
      Mot de passe
    </label>
    <div
      className="col"
    >
      <input
        className="form-control"
        id="password"
        name="password"
        onChange={[Function]}
        type="password"
        value={undefined}
      />
    </div>
  </div>
  <div
    className="form-group row"
  >
    <label
      className="col-3 col-form-label"
      htmlFor="accept"
    >
      I accept.
    </label>
    <div
      className="col"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={undefined}
            className="form-check-input"
            name="accept"
            onChange={[Function]}
            type="checkbox"
          />
           
          Common, accept it!
        </label>
      </div>
    </div>
  </div>
  <button
    className="btn btn-primary"
    type="submit"
  >
    OK
  </button>
</form>
`;

exports[`Form with a choice and a default 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group row"
  >
    <label
      className="col-3 col-form-label"
      htmlFor="dog_or_cat"
    >
      Are you rather a dog or cat person ?
    </label>
    <div
      className="col"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={false}
            className="form-check-input"
            id="dog_or_cat_cat"
            name="dog_or_cat"
            onChange={[Function]}
            type="radio"
            value="cat"
          />
           
          Chat
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={false}
            className="form-check-input"
            id="dog_or_cat_dog"
            name="dog_or_cat"
            onChange={[Function]}
            type="radio"
            value="dog"
          />
           
          Chien
        </label>
      </div>
    </div>
  </div>
  <button
    className="btn btn-primary"
    type="submit"
  >
    OK
  </button>
</form>
`;
